--- a/frontend/project_frontend/pubspec.yaml
+++ b/frontend/project_frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   provider: ^6.1.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
