--- a/frontend/project_frontend/pubspec.yaml
+++ b/frontend/project_frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.3.3
   provider: ^6.1.2
   http: ^1.2.2
+  mysql1: ^0.20.0
 
 dev_dependencies:
   flutter_test:
